change test file